--- a/LenguajeFrontEnd4Semestre2024/CSS/PracticaPeriodicoExtra/css/estilos.css
+++ b/LenguajeFrontEnd4Semestre2024/CSS/PracticaPeriodicoExtra/css/estilos.css
@@ -5,10 +5,10 @@
 }
 
 .imagenNav{
-    /*display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;*/
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -18,10 +18,13 @@
 .imagenNav img{
     width: 15%;
     margin: 5px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .limpiar{
     clear: both;
+    padding-top: 70px;
 }
 
 .limpiar nav{
@@ -56,6 +59,7 @@
     margin-left: 20px;
  }
 
+
  .sectionPrincipal header h1{
     border-left: 8px solid red;
     padding: 8px;
@@ -63,13 +67,20 @@
  }
 
 .tercerSection{
-    margin: 8px;
+    margin: 20px;
     width: 25%;
     float: left;
+    padding-left: 30px;
 }
 
 .tercerSection article img{
     width: 100%;
+    box-shadow: 5px 5px 15px #333;
+    transition: transform 0.3s ease;
+}
+
+.tercerSection article img:hover{
+    transform: scale(1.1);
 }
 
 .tercerSection article a{
@@ -86,4 +97,16 @@
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
+  }
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  footer{
+    clear: both;
+    background-color: red;
+    color: white;
+    font-size: 7em;
   }
