--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/peliculas/listado-peliculas/listado-peliculas.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/peliculas/listado-peliculas/listado-peliculas.component.html
@@ -1,29 +1,35 @@
 <button (click)="agregarPelicula()">Agregar Peliculas</button>
 
-@if(!listadPeliculas){
-  <img src="loading.gif" alt="">
-}@else if(listadPeliculas.length === 0){
-  <p>No hay peliculas para motsrar</p>
-}@else {
-  @for (pelicula of listadPeliculas; track $index) {
-    <div class="contendor-peliculas">
-      <div style="display: flex; flex-direction: row; gap: 10px">
-        @if(!pelicula.poster){
+
+ <app-listado-generico [listado]="listadPeliculas">  
+  <ng-container contenido>
+    @for (pelicula of listadPeliculas; track $index) {
+      <div class="contendor-peliculas">
+        <div style="display: flex; flex-direction: row; gap: 10px">
+          @if(!pelicula.poster){
+            <div>
+              <img src="https://jkfenner.com/wp-content/uploads/2019/11/default.jpg" width="169" height="250">
+            </div>
+          }@else {
+            <div>
+              <img [src]="pelicula.poster" width="169" height="250">
+            </div>
+          }
           <div>
-            <img src="https://jkfenner.com/wp-content/uploads/2019/11/default.jpg" width="169" height="250">
+            <p>{{pelicula.titulo | uppercase}}</p>
+            <p>{{pelicula.fechaLanzamiento | date:'dd-MMMM-yyyy'}}</p>
+            <p>{{pelicula.precio | currency}}</p>
+            <button mat-flat-button (click)="removerPelicula(pelicula)">
+              <mat-icon>delete</mat-icon>
+              Eliminar Pelicula
+            </button>
           </div>
-        }@else {
-          <div>
-            <img [src]="pelicula.poster" width="169" height="250">
-          </div>
-        }
-        <div>
-          <p>{{pelicula.titulo | uppercase}}</p>
-          <p>{{pelicula.fechaLanzamiento | date:'dd-MMMM-yyyy'}}</p>
-          <p>{{pelicula.precio | currency}}</p>
-          <button (click)="removerPelicula(pelicula)">Eliminar Pelicula</button>
         </div>
-      </div>
-   </div>
-  }
-}
+     </div>
+    }
+  </ng-container>
+ </app-listado-generico>
+
+
+  
+
