--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/app.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/app.component.html
@@ -1,20 +1,7 @@
 <app-menu></app-menu>
-
+<!--
 <app-rating [maximoRating]="5" (votado)="procesarVoto($event)"></app-rating>
-
-<h1>En cines</h1>
-
-<app-listado-peliculas [listadPeliculas]="peliculasEnCine"></app-listado-peliculas>
-
-<h1>En estrenos</h1>
-
-<app-listado-peliculas [listadPeliculas]="peliculasEnEstreno"></app-listado-peliculas>
-
-
-
-
-
-
-
-
-
+-->
+<div class="contenedor">
+    <router-outlet></router-outlet>
+</div>
