--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/compartidos/componentes/menu/menu.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/compartidos/componentes/menu/menu.component.html
@@ -1,8 +1,11 @@
 <mat-toolbar>
    <span>
-    <a mat-button>
+    <a mat-button routerLink="">
      <mat-icon>local_movies</mat-icon> Peliculas  
     </a>
    </span>
+   <span>
+      <a mat-button routerLink="generos">Géneros</a>
+     </span>
 </mat-toolbar>
   
