--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.html
@@ -1,1 +1,3 @@
-<p>indice-generos works!</p>
+<h2>Géneros</h2>
+<button mat-flat-button routerLink="/generos/crear">Crear Géneros</button>
+<button mat-stroked-button routerLink="">Cancelar</button>
