--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/compartidos/componentes/menu/menu.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/compartidos/componentes/menu/menu.component.html
@@ -5,7 +5,17 @@
     </a>
    </span>
    <span>
-      <a mat-button routerLink="generos">Géneros</a>
-     </span>
+      <a mat-button routerLink="/generos">Géneros</a>
+   </span>
+   <span>
+      <a mat-button routerLink="/actores">Actores</a>
+   </span>
+   <span>
+      <a mat-button routerLink="/cines">Cines</a>
+   </span>
+   <span>
+      <a mat-button routerLink="/peliculas/crear">Crear Películas</a>
+   </span>
+
 </mat-toolbar>
   
