--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/crear-generos/crear-generos.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/crear-generos/crear-generos.component.html
@@ -1,3 +1,7 @@
+<h2>Crear Géneros</h2>
 
-<button mat-flat-button (click)="guardarCambios()">Guardar Cambios</button>
-<button mat-stroked-button routerLink="/generos">Cancelar</button>
+
+<app-formulario-genero (posteoFormulario)="guardarCambios($event)"></app-formulario-genero>
+
+
+
