--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/editar-genero/editar-genero.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/editar-genero/editar-genero.component.html
@@ -1,1 +1,5 @@
-<p>El id del género a editar es: {{id}}</p>
+<h2>Editar Géneros</h2>
+
+<app-formulario-genero [modelo]="genero" (posteoFormulario)="guardarCambios($event)"></app-formulario-genero>
+
+
