03/02/2025 consumo http get

--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/cines/crear-cine/crear-cine.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/cines/crear-cine/crear-cine.component.html
@@ -1,3 +1,6 @@
+<h2>Crear Cine</h2>
+
+<app-formulario-cines (posteoFormulario)="guardarCambios($event)"></app-formulario-cines>
 
 
 <app-mapa></app-mapa>
