--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/actores/indice-actores/indice-actores.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/actores/indice-actores/indice-actores.component.html
@@ -1,3 +1,39 @@
 <h2>Actores</h2>
 <button mat-flat-button routerLink="/actores/crear">Crear Actores</button>
 <button mat-stroked-button routerLink="">Cancelar</button>
+
+<table mat-table [dataSource]="listaActor" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="Id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="Nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="fechaNacimiento">
+        <th mat-header-cell *matHeaderCellDef> Fecha Nacimiento </th>
+        <td mat-cell *matCellDef="let element"> {{element.fechaNacimiento}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Foto">
+        <th mat-header-cell *matHeaderCellDef> Foto </th>
+        <td mat-cell *matCellDef="let element">
+            <img src="{{element.foto}}" >
+        </td>
+      </ng-container>
+  
+    <ng-container matColumnDef="Accion">
+      <th mat-header-cell *matHeaderCellDef> Acción </th>
+      <td mat-cell *matCellDef="let element">
+        <a mat-flat-button routerLink="/actores/editar/{{element.id}}">Editar</a> 
+        <button mat-flat-button style="background-color: red;">Borrar</button>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="columnasMostrar"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnasMostrar;"></tr>
+  </table>
