--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.html
@@ -18,11 +18,19 @@
       <th mat-header-cell *matHeaderCellDef> Acción </th>
       <td mat-cell *matCellDef="let element">
         <a mat-flat-button routerLink="/generos/editar/{{element.id}}">Editar</a> 
-        <button mat-flat-button style="background-color: red;">Borrar</button>
+        <button mat-flat-button style="background-color: red;" (click)="borrar()">Borrar</button>
       </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="columnasMostrar"></tr>
     <tr mat-row *matRowDef="let row; columns: columnasMostrar;"></tr>
   </table>
+
+  <mat-paginator [length]="cantidadTotalRegistros"
+    [pageSize]="paginacion"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Seleccionar pagina"
+    (page)="actualizarPaginacion($event)"
+    >
+  </mat-paginator>
   
