--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.html
@@ -16,9 +16,9 @@
   
     <ng-container matColumnDef="Accion">
       <th mat-header-cell *matHeaderCellDef> Acción </th>
-      <td mat-cell *matCellDef="let element">
-        <a mat-flat-button routerLink="/generos/editar/{{element.id}}">Editar</a> 
-        <button mat-flat-button style="background-color: red;" (click)="borrar()">Borrar</button>
+      <td mat-cell *matCellDef="let genero">
+        <a mat-flat-button routerLink="/generos/editar/{{genero.id}}">Editar</a> 
+        <button mat-flat-button style="background-color: red;" (click)="borrar(genero.id)">Borrar</button>
       </td>
     </ng-container>
   
