18/02/2025 crear peliculas sin api

--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/peliculas/editar-pelicula/editar-pelicula.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/peliculas/editar-pelicula/editar-pelicula.component.html
@@ -1,3 +1,7 @@
-<h1>Editar Película</h1>
+<h2>Editar Película</h2>
 
-<app-formulario-peliculas [modelo]="pelicula" (posteoFormulario)="guardarCambios($event)"></app-formulario-peliculas>
+<app-formulario-peliculas [modelo]="pelicula" (posteoFormulario)="guardarCambios($event)"
+[generosNoSeleccionados]="generosNoSeleccionados" [generosSeleccionados]="generosSeleccionados"
+[cinesNoSeleccionados]="cinesNoSeleccionados" [cinesSeleccionados]="cinesSeleccionados"
+[actoresSeleccionados]="actoresSeleccionados"
+></app-formulario-peliculas>
