--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.css
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/generos/indice-generos/indice-generos.component.css
@@ -9,3 +9,9 @@ table{
 table button{
      margin-left: 1rem;
 }
+
+mat-form-field{
+     display: block;
+     width: 100%;
+     padding-top: 20px;
+}
