--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/peliculas/formulario-peliculas/formulario-peliculas.component.html
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/src/app/peliculas/formulario-peliculas/formulario-peliculas.component.html
@@ -23,7 +23,7 @@
       <div>
         <app-input-img 
         [urlImagenActual]="modelo?.poster"
-        titulo="Foto del Actor" (archivoSeleccionado)="archivoSeleccionado($event)"  ></app-input-img>
+        titulo="Foto de la Pelicula" (archivoSeleccionado)="archivoSeleccionado($event)"  ></app-input-img>
      </div>
 
      <h4>Seleccione los Géneros</h4>
